--- a/Opengl_Tester.vcxproj
+++ b/Opengl_Tester.vcxproj
@@ -177,6 +177,8 @@
     <None Include="Shaders\framebuffer\framebuffer.vert" />
     <None Include="Shaders\light\light.frag" />
     <None Include="Shaders\light\light.vert" />
+    <None Include="Shaders\skybox\skybox.frag" />
+    <None Include="Shaders\skybox\skybox.vert" />
     <None Include="Shaders\transparency\transparency.frag" />
     <None Include="Shaders\transparency\transparency.vert" />
   </ItemGroup>
